--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = "https://quartz.jzhao.xyz/"
+baseURL = "https://jk2333.tk/"
 languageCode = "en-us"
 relativeURLs = false
 disablePathToLower = true
